tests/NormalTests/paczka1/small_fuzzy/87078148.err
Error in line 4: PhmegX3dplY Sh04 42,3
Error in line 2: kJbjo S604 74,5
Error in line 7: LmxZA A726 81,1
